# whisper-dictate-linux

./: .gitignore  AGENTS.md  README.md  config.example.toml  cursor_chat_instalaci_n_de_whisper.json  dictate.py  install.sh  pyproject.toml  requirements.txt  setup.py  whisper-dictate-linux  whisper-dictate-linux.service
whisper_dictate/: __init__.py  audio.py  config.py  inject.py  keyboard.py  notify.py  whisper.py
